crates/ditto-checker/tests/golden/type-errors/row_unification_error_0.ditto
module Test exports (..)

foo = fn (r : { r | foo: Unit}): r -> unit
